@@ -1,0 +1,14 @@
+%p
+  = link_to_close options_leads_path
+  = hidden_field_tag "lead[user_id]", @current_user.id
+  == Sort leads by #{link_to(@sort_by, "#", :id => :sort_by)}
+  == displaying first name #{link_to(@naming, "#", :id => :naming)} the last name.
+  == Show #{link_to(@per_page, "#", :id => :per_page)} lead records per page
+  == using #{link_to(@outline, "#", :id => :outline)} format.
+%p
+
+%script
+  = render :partial => "common/naming"
+  = render :partial => "sort_by"
+  = render :partial => "common/per_page"
+  = render :partial => "common/outline"
