@@ -1,0 +1,10 @@
+- sort_by_menu_items = ["First Name", "Last Name", "Date Created", "Date Updated"].inject([]) do | items, sort_by|
+  - items << %Q[{ name: "#{sort_by}", on_select: function() { #{redraw(:sort_by, sort_by)} } }]
+
+:plain
+  new crm.Menu({
+    trigger   : "sort_by",
+    fade      : 0.5,
+    appear    : 0.5,
+    menu_items: [ #{sort_by_menu_items.join(",")} ]
+  });
