@@ -1,0 +1,9 @@
+page.call "crm.flick", :empty, :toggle
+page.call "crm.hide_form", :create_lead
+page.call "crm.flip_form", :options
+if params[:cancel] != "true"
+  page[:options].replace_html :partial => "options"
+  page.call "crm.set_title", :create_lead, "Options"
+else
+  page.call "crm.set_title", :create_lead, "Leads"
+end
