@@ -1,34 +1,34 @@
 require File.expand_path(File.dirname(__FILE__) + '/../../spec_helper')
 
-describe "/campaigns/options.rjs" do
-  include CampaignsHelper
+describe "/leads/options.rjs" do
+  include LeadsHelper
   
   before(:each) do
     login_and_assign
   end
 
   it "should toggle empty message div if it exists" do
-    render "campaigns/options.js.rjs"
+    render "leads/options.js.rjs"
 
     response.should include_text('crm.flick("empty", "toggle")')
   end
 
-  it "should hide [Create Campaign] form if it's visible" do
-    render "campaigns/options.js.rjs"
+  it "should hide [Create Lead] form if it's visible" do
+    render "leads/options.js.rjs"
 
-    response.should include_text('crm.hide_form("create_campaign")')
+    response.should include_text('crm.hide_form("create_lead")')
   end
 
-  describe "campaign options" do
+  describe "lead options" do
     it "should render [options.html.haml] template into :options div and show it" do
       params[:cancel] = nil
-      render "campaigns/options.js.rjs"
+      render "leads/options.js.rjs"
     
       response.should have_rjs("options") do |rjs|
         with_tag("input[type=hidden]") # @current_user
       end
       response.should include_text('crm.flip_form("options")')
-      response.should include_text('crm.set_title("create_campaign", "Options")')
+      response.should include_text('crm.set_title("create_lead", "Options")')
     end
 
     it "should call JavaScript functions to load preferences menus" do
@@ -36,22 +36,21 @@ describe "/campaigns/options.rjs" do
       template.should_receive(:render).with(:partial => "sort_by")
       template.should_receive(:render).with(:partial => "common/per_page")
       template.should_receive(:render).with(:partial => "common/outline")
+      template.should_receive(:render).with(:partial => "common/naming")
 
-      render "campaigns/options.js.rjs"
+      render "leads/options.js.rjs"
     end
   end
   
-  describe "cancel campaign options" do
-    it "should hide campaign options form" do
+  describe "cancel lead options" do
+    it "should hide lead options form" do
       params[:cancel] = "true"
-      render "campaigns/options.js.rjs"
+      render "leads/options.js.rjs"
 
       response.should_not have_rjs("options")
       response.should include_text('crm.flip_form("options")')
-      response.should include_text('crm.set_title("create_campaign", "Campaigns")')
+      response.should include_text('crm.set_title("create_lead", "Leads")')
     end
   end
 
 end
-
-
