@@ -4,6 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sun, Jun 6, 2009
+---------------------------------------------------------------------
+- Implemented options for Leads.
+- Happy birthday, Rema!
+
 Thu, Jun 4, 2009
 ---------------------------------------------------------------------
 - Implemented :sort_by option for Campaigns.
